# cyberduck-backend

./: .gitignore  Cargo.toml  README.md  api-doc.md  gen_duck_qr_codes.py  gen_session_secret.py
.cargo/: config.toml
.github/workflows/: release.yml
certs/: RootCA.pem  RootCA.srl  localhost.crt  localhost.csr  localhost.key  rootCA.key
prisma/: schema.prisma
prisma-cli/: Cargo.toml
python-utils/: gen_duck_qr_codes.py
src/: configuration.rs  main.rs  prisma.rs  redis_session_layer.rs  wechat_login.rs
src/db_api/: ducks.rs  exhibits.rs  locations.rs  mod.rs  public.rs  rankings.rs
src/handlers/: api.rs  ducks.rs  exhibits.rs  locations.rs  mod.rs  rankings.rs
