[package]
name = "wechat-login"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
axum = "0.5.16"
config = "0.13.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
oauth2 = "4.2.3"
anyhow = "1.0.65"
serde = "1.0.145"
lazy_static = "1.4.0"
axum-server = { version = "0.4.2", features = ["tls-rustls"] }
redis = { version = "0.21.6", features = ["tokio-comp"] }
axum_database_sessions = { version = "4.1.0", features = ["redis-db"] }
time = "=0.1.44"
base64 = "0.13.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.1" }
serde_json = "1.0.85"
url = "2.3.1"
axum-auth = "0.3.0"

[workspace]
members = [
    "prisma-cli",
]
